[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/General/Tiles/wood tile a.png" type="Texture" id=1]
[ext_resource path="res://Assets/General/Tiles/wood tile b.png" type="Texture" id=2]
[ext_resource path="res://Objects/Collision/NavmeshLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Gary's House/Interior/fig leaf.png" type="Texture" id=5]
[ext_resource path="res://Assets/Gary's House/Interior/bed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Gary's House/Interior/sink.png" type="Texture" id=7]
[ext_resource path="res://Assets/Gary's House/Interior/dresser.png" type="Texture" id=8]
[ext_resource path="res://Assets/Gary's House/Interior/mat a.png" type="Texture" id=9]
[ext_resource path="res://Assets/Gary's House/Interior/lamp.png" type="Texture" id=10]
[ext_resource path="res://Assets/Gary's House/Interior/radio.png" type="Texture" id=11]
[ext_resource path="res://Assets/Gary's House/Interior/wall b.png" type="Texture" id=12]
[ext_resource path="res://Assets/Gary's House/Interior/mat b.png" type="Texture" id=13]
[ext_resource path="res://Assets/Gary's House/Interior/window.png" type="Texture" id=14]
[ext_resource path="res://Assets/Gary's House/Interior/curtains.png" type="Texture" id=15]
[ext_resource path="res://Assets/Gary's House/Interior/cabinets.png" type="Texture" id=16]
[ext_resource path="res://Objects/SceneTransition/PlayerSpawnLocation.tscn" type="PackedScene" id=17]
[ext_resource path="res://Players/Gary/Gary Misc.png" type="Texture" id=18]
[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=19]
[ext_resource path="res://Assets/General/Shadows/rectangle shadow small.png" type="Texture" id=20]
[ext_resource path="res://Objects/SceneTransition/Doorway.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/Gary's House/Interior/painting.png" type="Texture" id=22]
[ext_resource path="res://Scripts/ScaledCamera2D.gd" type="Script" id=23]
[ext_resource path="res://Scripts/Objects/SceneTransition/Exit.gd" type="Script" id=24]
[ext_resource path="res://Objects/Collision/Navmesh.tscn" type="PackedScene" id=25]
[ext_resource path="res://Scripts/Item_Interact.gd" type="Script" id=26]
[ext_resource path="res://Assets/General/Backgrounds/blue bckgd.png" type="Texture" id=27]
[ext_resource path="res://UI/Battle/Battle Dialogue.png" type="Texture" id=28]
[ext_resource path="res://Misc/Font/Dialogue.tres" type="DynamicFont" id=29]
[ext_resource path="res://Scripts/Area_Specific/Garys_House.gd" type="Script" id=30]
[ext_resource path="res://Scripts/UI/Talk_Adjusting.gd" type="Script" id=31]
[ext_resource path="res://Scripts/General_Dialogue.gd" type="Script" id=32]
[ext_resource path="res://Scripts/Inn.gd" type="Script" id=33]
[ext_resource path="res://UI/DialogueCursor.tscn" type="PackedScene" id=34]
[ext_resource path="res://Scripts/UI/Menu_Item.gd" type="Script" id=35]
[ext_resource path="res://UI/Menu Cursor.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scripts/UI/Inn_Menu_Cursor.gd" type="Script" id=37]
[ext_resource path="res://UI/Interaction Window.png" type="Texture" id=38]

[sub_resource type="TileSet" id=1]
0/name = "wood tile a.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood tile b.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 18 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 18 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 18 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=174]
animations = [ {
"frames": [ SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="WorldRoot" type="Node2D"]
script = ExtResource( 30 )

[node name="Node2D" type="Node2D" parent="."]
rotation = 0.00523599

[node name="BlueBckgd" type="Sprite" parent="Node2D"]
position = Vector2( 73.3969, -115.386 )
z_index = -100
texture = ExtResource( 27 )

[node name="RectangleShadowSmall" type="Sprite" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0.8 )
position = Vector2( 145, 21 )
rotation = 0.0142471
scale = Vector2( 1.27778, 1.14444 )
texture = ExtResource( 20 )

[node name="Dresser2" type="Sprite" parent="Node2D"]
position = Vector2( 147, 2.71007 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 8 )

[node name="CircleShadowSmall4" type="Sprite" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 131.878, -23.6926 )
scale = Vector2( 0.678716, 0.591365 )
texture = ExtResource( 19 )

[node name="Radio" type="Sprite" parent="Node2D"]
position = Vector2( 95, -64.2899 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )
centered = false
offset = Vector2( 0, -2 )

[node name="Lamp" type="Sprite" parent="Node2D"]
position = Vector2( 162, -28.2899 )
scale = Vector2( 0.96, 0.96 )
texture = ExtResource( 10 )
offset = Vector2( 0, 0.302 )

[node name="YSort" type="YSort" parent="Node2D"]

[node name="FloorTiles" type="TileMap" parent="Node2D/YSort"]
modulate = Color( 0.98, 0.9506, 0.9506, 1 )
position = Vector2( -55.5, 41.5 )
rotation = -0.0349066
z_index = -5
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 63, 28 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -196610, 1, 0, -196609, 0, 0, -262144, 1, 0, -262143, 0, 0, -262142, 1, 0, -262141, 0, 0, -131074, 1, 0, -131073, 1, 0, -196608, 0, 0, -196607, 1, 0, -196606, 0, 0, -196605, 1, 0, -65538, 1, 0, -65537, 0, 0, -131072, 1, 0, -131071, 0, 0, -131070, 1, 0, -131069, 0, 0, -2, 0, 0, -1, 1, 0, -65536, 0, 0, -65535, 1, 0, -65534, 0, 0, -65533, 1, 0, 65534, 1, 0, 65535, 0, 0, 0, 1, 0, 1, 0, 0, 2, 1, 0, 3, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 1, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/YSort"]
visible = false
position = Vector2( 19, -77 )
z_index = 1
frames = SubResource( 174 )
frame = 3
playing = true

[node name="MatA" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -96, 82 )
rotation = 0.0327665
scale = Vector2( 1.18876, 1.18876 )
z_index = -1
texture = ExtResource( 9 )

[node name="WallB" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -92.4479, -53.9254 )
rotation = -0.0535369
scale = Vector2( 0.761036, 0.659741 )
z_index = -10
texture = ExtResource( 12 )

[node name="WallB2" type="Sprite" parent="Node2D/YSort"]
position = Vector2( 78.9514, -14.4848 )
rotation = -0.00893207
scale = Vector2( 0.744264, 0.674072 )
z_index = -11
texture = ExtResource( 12 )
centered = false
offset = Vector2( -120, -219 )
flip_h = true

[node name="MatB" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -1, -24 )
rotation = 0.00740846
scale = Vector2( 1.65873, 1.62398 )
z_index = -1
texture = ExtResource( 13 )

[node name="Window" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -93.1041, -58.5009 )
rotation = -0.0452074
scale = Vector2( 1.04662, 1.00764 )
z_index = -3
texture = ExtResource( 14 )

[node name="Curtains" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -87.1041, -52.5008 )
rotation = -0.0269755
scale = Vector2( 1.57944, 1.44791 )
z_index = -2
texture = ExtResource( 15 )

[node name="Sink" parent="Node2D/YSort" instance=ExtResource( 4 )]
position = Vector2( -118, 55 )
tile_size = Vector2( 63, 28 )
grid_size = Vector2( 1.9, 0.8 )
texture = ExtResource( 7 )
texture_scale = Vector2( 1.2, 1.2 )
texture_offset = Vector2( -2, 16 )
height = 64.0

[node name="Cabinets" type="Sprite" parent="Node2D/YSort"]
position = Vector2( -141, -32 )
rotation = -0.00349066
scale = Vector2( 1.1, 1 )
z_index = -3
texture = ExtResource( 16 )

[node name="Painting" type="Sprite" parent="Node2D/YSort"]
position = Vector2( 93, -69 )
scale = Vector2( 0.986361, 0.979884 )
z_index = -3
texture = ExtResource( 22 )

[node name="FigLeaf" parent="Node2D/YSort" instance=ExtResource( 4 )]
position = Vector2( 10.7201, 106.996 )
tile_size = Vector2( 40, 16 )
texture = ExtResource( 5 )
texture_offset = Vector2( 0, 25 )
height = 82.0
preview_collision_box = false

[node name="FigLeafShadow" type="Sprite" parent="Node2D/YSort"]
self_modulate = Color( 1, 1, 1, 0.815686 )
position = Vector2( 10, 105 )
texture = ExtResource( 19 )

[node name="Bed" parent="Node2D/YSort" instance=ExtResource( 4 )]
position = Vector2( -14, -16 )
rotation = 0.0189685
tile_size = Vector2( 60.35, 27.708 )
grid_size = Vector2( 1.396, 2.12 )
texture = ExtResource( 6 )
texture_scale = Vector2( 1.4, 1.4 )
texture_offset = Vector2( 2.766, 26.476 )
height = 24.0

[node name="Dresser" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 166, 29 )
rotation = 0.00583901
sort_enabled = false
tile_size = Vector2( 63, 28 )
grid_size = Vector2( 2.164, 0.79 )
texture_scale = Vector2( 1.2, 1.2 )
texture_offset = Vector2( 0, 17 )
height = 64.0
preview_collision_box = false
always_update = true

[node name="CollisionRoot" type="Node2D" parent="Node2D"]

[node name="Navmesh" parent="Node2D/CollisionRoot" instance=ExtResource( 25 )]

[node name="NavmeshLayer" parent="Node2D/CollisionRoot/Navmesh" instance=ExtResource( 3 )]
position = Vector2( -49, 35.1 )
polygon = PoolVector2Array( 56, -83.1, 160, -36.1, 142, -25.1, 211, 9.9, 58, 86.9, -8.39905, 60.1853, -39, 73.9, -97, 45.9, -68.4242, 31.9573, -129, 6.89999 )
__meta__ = {
"_editor_description_": ""
}

[node name="OutsideHouse" parent="Node2D/CollisionRoot" instance=ExtResource( 21 )]
position = Vector2( -130, 106 )
script = ExtResource( 24 )
target_scene = "res://Gary_sHouse.tscn"
exit_name = "OutsideHouse"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/CollisionRoot/OutsideHouse"]
position = Vector2( -13, 10 )
polygon = PoolVector2Array( -28, -23, 2, -36, 63, -6, 32, 6 )

[node name="PlayerSpawnDefault" parent="Node2D/CollisionRoot" instance=ExtResource( 17 )]
position = Vector2( 24.7117, -55.1301 )
height = 24

[node name="SleepSpawn" parent="Node2D/CollisionRoot" instance=ExtResource( 17 )]
visible = false
position = Vector2( 29.8111, -36.1566 )
door_name = "Sleep"
height = 24

[node name="PlayerSpawnFromOutsideHouse2" parent="Node2D/CollisionRoot" instance=ExtResource( 17 )]
position = Vector2( -96, 82 )
door_name = "InsideHouse"
direction = Vector2( 1, 1 )

[node name="Item_Interact" type="Area2D" parent="Node2D"]
position = Vector2( -6.9266, 14.0365 )
script = ExtResource( 26 )
item_name = "Yummy Cake"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Item_Interact"]
position = Vector2( -47.3501, 124.25 )
polygon = PoolVector2Array( -84.601, -114.559, -54.5281, -100.716, -85.4334, -82.5542, -116.517, -98.3916 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 6.00346, 0.97905 )
z_index = 4096
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.655, 0.65 )
script = ExtResource( 23 )

[node name="Info_Window" type="Sprite" parent="Camera2D"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
position = Vector2( -112.003, -163.979 )
scale = Vector2( 0.5, 0.6 )
z_index = 3
texture = ExtResource( 28 )

[node name="First_Text" type="Label" parent="Camera2D/Info_Window"]
margin_left = -147.143
margin_top = -11.0
margin_right = 98.857
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.1 )
custom_fonts/font = ExtResource( 29 )
text = "You got a Flummery Flambe!"
align = 1

[node name="Info_Window2" type="Sprite" parent="Camera2D"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
position = Vector2( -112.003, -163.979 )
scale = Vector2( 0.5, 0.6 )
z_index = 3
texture = ExtResource( 28 )

[node name="First_Text" type="Label" parent="Camera2D/Info_Window2"]
margin_left = -151.143
margin_top = -11.0
margin_right = 94.857
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.2, 1.1 )
custom_fonts/font = ExtResource( 29 )
text = "Press (Spacebar) to jump!"
align = 1

[node name="Interaction" type="Node2D" parent="Camera2D"]
script = ExtResource( 33 )
inn_name = "Loqua"
cost = 75
target_scene = "res://Areas/Berry Lake/BerryLake_Inn_2.tscn"

[node name="Dialogue" type="Sprite" parent="Camera2D/Interaction"]
visible = false
position = Vector2( -76.8348, -158.579 )
scale = Vector2( 0.7, 0.7 )
z_index = 3
texture = ExtResource( 28 )
script = ExtResource( 32 )

[node name="DialogueCursor" parent="Camera2D/Interaction/Dialogue" instance=ExtResource( 34 )]
visible = false
position = Vector2( 154.045, 25.1428 )

[node name="Name" type="Label" parent="Camera2D/Interaction/Dialogue"]
margin_left = -158.813
margin_top = -34.8572
margin_right = 162.0
margin_bottom = 16.1428
custom_fonts/font = ExtResource( 29 )
text = "Tom:"
autowrap = true
script = ExtResource( 31 )

[node name="Talk" type="Label" parent="Camera2D/Interaction/Dialogue/Name"]
margin_left = 47.0
margin_top = -0.00012207
margin_right = 310.384
margin_bottom = 50.9999
custom_fonts/font = ExtResource( 29 )
text = "Hey. What do you need?"
autowrap = true
percent_visible = 0.1

[node name="ShopOptions" type="Sprite" parent="Camera2D/Interaction"]
visible = false
position = Vector2( 138.997, 99.021 )
scale = Vector2( 0.65, 0.6 )
texture = ExtResource( 38 )

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Interaction/ShopOptions"]
margin_left = -21.5385
margin_top = -21.6667
margin_right = 61.4615
margin_bottom = 93.3333
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1, 1.05 )
custom_constants/separation = 10

[node name="Sleep" type="Label" parent="Camera2D/Interaction/ShopOptions/VBoxContainer"]
margin_right = 83.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 29 )
text = "Sleep"
autowrap = true
script = ExtResource( 35 )

[node name="Talk" type="Label" parent="Camera2D/Interaction/ShopOptions/VBoxContainer"]
margin_top = 25.0
margin_right = 83.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 29 )
text = "Talk"
autowrap = true
script = ExtResource( 35 )

[node name="MenuCursor" parent="Camera2D/Interaction/ShopOptions" instance=ExtResource( 36 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -38.4623
margin_top = 52.0832
margin_right = 42.5377
margin_bottom = 77.0832
rect_scale = Vector2( 1, 1.05 )
script = ExtResource( 37 )
menu_parent_path = NodePath("../VBoxContainer")
cursor_offset = Vector2( -21, 0 )

[connection signal="item_get" from="Node2D/Item_Interact" to="Camera2D" method="_on_Item_Interact_item_get"]
[connection signal="option_selecting" from="Camera2D/Interaction" to="Camera2D/Interaction/ShopOptions/MenuCursor" method="_on_Interaction_option_selecting"]
